unpackaged/main/default/objects/Customer__e/Customer__e.object-meta.xml
<CustomObject>
    <label>Customer GR</label>
    <pluralLabel>Customers GR</pluralLabel>
</CustomObject>