unpackaged/main/default/objects/Customer__e/fields/Email_1_ID__c.field-meta.xml
<CustomField>
        <fullName>Email_1_ID__c</fullName>
        <description>Email 1 ID</description>
        <label>Email 1 ID</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>