unpackaged/main/default/objects/Customer__e/fields/Phone__c.field-meta.xml
<CustomField>
        <fullName>Phone__c</fullName>
        <label>Phone ID 1</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>