unpackaged/main/default/objects/Customer__e/fields/TestField__c.field-meta.xml
<CustomField>
        <fullName>TestField__c</fullName>
        <description>Email 1</description>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>